# wamp2

./: .gitignore  .gitmodules  .oauth2_authenticator.h.kate-swp  CMakeLists.txt  CMakeLists_BACKUP_4764.txt  CMakeLists_LOCAL_4764.txt  CMakeLists_REMOTE_4764.txt  README.md  authenticator.cpp  authenticator.h  connection.cpp  connection.h  credential_store.h  foo.ixx  future_handler.h  http_request.h  http_server.h  json_serializer.h  module.modulemap  msgpack_serializer.cpp  msgpack_serializer.h  oauth2_authenticator.h  processor.h  proxy_config.proto  queue.h  random.cpp  random.h  registration.h  router.cpp  router.h  router_BACKUP_4412.h  router_BASE_4412.h  router_REMOTE_4412.h  server_session.h  session.h  symbols.h  tcp_server.h  to_string.h  translate.h  uri.h  (+5 more)
test/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  all.cpp  all_BACKUP_800.cpp  cmake_install.cmake  wamp_test_all.vcxproj  wamp_test_all.vcxproj.filters
